--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container flex-lg-column">
             <a class="navbar-brand mx-lg-auto mb-lg-4" href="#">
                 <span class="h3 fw-bold d-block d-lg-none">Kauê Matos</span>
-                <img src="./assets/images/perfil-img.png" class="Img-perfil" class="d-none d-lg-block rounded-circle"
+                <img src="./assets/images/perfil-img.png" widht="400px" class="d-none d-lg-block rounded-circle"
                     alt="Perfil">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
