--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container flex-lg-column">
             <a class="navbar-brand mx-lg-auto mb-lg-4" href="#">
-                <span class="h3 fw-bold d-block d-lg-none">Kauê Matos</span>
-                <img src="./assets/images/perfil-img.png" widht="400px" class="d-none d-lg-block rounded-circle"
-                    alt="Perfil">
+                <span class="h3 fw-bold d-block d-lg-none">Portfolio</span>
+                <img src="./assets/images/perfil.jpg.jpg" class="d-none d-lg-block rounded-circle" alt="Perfil">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,6 +34,12 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#Projetos">Projetos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Habilidades">Habilidades</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#certificados">Qualificações</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#Sobre">Sobre</a>
@@ -53,7 +58,7 @@
     <!-- CONTENT WRAPPER -->
     <div id="content-wrapper">
 
-        <!-- HOME -->
+        <!-- Seja bem vindo -->
         <section id="home" class="full-height px-lg-5">
 
             <div class="container">
@@ -73,10 +78,10 @@
             </div>
 
         </section>
-        <!-- //HOME -->
+        <!-- //Fim -->
 
         <!-- Habilidades -->
-        <section id="services" class="full-height px-lg-5">
+        <section id="Habilidades" class="full-height px-lg-5">
             <div class="container">
 
                 <div class="row pb-4" data-aos="fade-up">
@@ -127,10 +132,10 @@
 
             </div>
         </section>
-        <!-- Habilidade-->
+        <!-- Habilidade fim-->
 
-        <!-- WORK -->
-        <section id="work" class="full-height px-lg-5">
+        <!-- Projetos -->
+        <section id="Projetos" class="full-height px-lg-5">
             <div class="container">
 
                 <div class="row pb-4" data-aos="fade-up">
@@ -202,7 +207,7 @@
         <!-- //Projetos-->
 
         <!-- Sobre min  -->
-        <section id="about" class="full-height px-lg-5">
+        <section id="Sobre" class="full-height px-lg-5">
             <div class="container">
 
                 <div class="row pb-4" data-aos="fade-up">
@@ -259,9 +264,9 @@
                             <div class="col-12" data-aos="fade-up" data-aos-delay="600">
                                 <div class="bg-base p-4 rounded-4 shadow-effect">
                                     <h4>Auxiliar de escritorio em geral</h4>
-                                    <p class="text-brand mb-2">Delute comercial LTDA</p>
+                                    <p class="text-brand mb-2">Delute comercial LTDA (2021 - Atual) </p>
                                     <p class="mb-0">Atividades:cotrole de estoque,Descarga e carregamento de
-                                        caminhões,separaçao de produtos,embalador (2021 - Atual) </p>
+                                        caminhões,separaçao de produtos,embalador </p>
                                 </div>
                             </div>
 
@@ -279,7 +284,7 @@
 
 
         <!-- Certificações -->
-        <section id="blog" class="full-height px-lg-5">
+        <section id="certificados" class="full-height px-lg-5">
             <div class="container">
 
                 <div class="row pb-4" data-aos="fade-up">
@@ -291,10 +296,25 @@
 
                 <div class="row gy-4">
 
+                    <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
+                        <div class="card-custom rounded-4 bg-base shadow-effect">
+                            <div class="card-custom-image rounded-5">
+                                <img class="rounded-4" src="./assets/images/certificados/Marketing-digital.png"
+                                    alt="Certificado Marketing digital">
+                            </div>
+                            <div class="card-custom-content p-4">
+                                <p class="text-brand mb-2">19 Janeiro,2022</p>
+                                <h5 class="mb-4">Marketing Digital</h5>
+                                <a href="#" class="link-custom">Clique aqui</a>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="col-md-4" data-aos="fade-up">
                         <div class="card-custom rounded-4 bg-base shadow-effect">
                             <div class="card-custom-image rounded-4">
-                                <img class="rounded-4" src="./assets/images/front-end.png" alt="">
+                                <img class="rounded-4" src="./assets/images/certificados/front-end.png"
+                                    alt="Certificado desenvolvedor Front-end">
                             </div>
                             <div class="card-custom-content p-4">
                                 <p class="text-brand mb-2">1 agosto, 2022</p>
@@ -307,7 +327,8 @@
                     <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
                         <div class="card-custom rounded-4 bg-base shadow-effect">
                             <div class="card-custom-image rounded-4">
-                                <img class="rounded-4" src="./assets/images/html e css.png" alt="">
+                                <img class="rounded-4" src="./assets/images/certificados/html e css.png"
+                                    alt="Certificado HTML E CSS ">
                             </div>
                             <div class="card-custom-content p-4">
                                 <p class="text-brand mb-2">5 Julho, 2022</p>
@@ -320,7 +341,8 @@
                     <div class="col-md-4" data-aos="fade-up" data-aos-delay="600">
                         <div class="card-custom rounded-4 bg-base shadow-effect">
                             <div class="card-custom-image rounded-4">
-                                <img class="rounded-4" src="./assets/images/figma.png" alt="">
+                                <img class="rounded-4" src="./assets/images/certificados/figma.png"
+                                    alt="Certificado Figma design para web">
                             </div>
                             <div class="card-custom-content p-4">
                                 <p class="text-brand mb-2">24 Julho, 2022</p>
@@ -333,7 +355,8 @@
                     <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
                         <div class="card-custom rounded-4 bg-base shadow-effect">
                             <div class="card-custom-image rounded-4">
-                                <img class="rounded-4" src="./assets/images/logica udemy.png" alt="">
+                                <img class="rounded-4" src="./assets/images/certificados/logica udemy.png"
+                                    alt="Certificado logica de programação">
                             </div>
                             <div class="card-custom-content p-4">
                                 <p class="text-brand mb-2">12 Março,2022</p>
@@ -341,16 +364,17 @@
                                 <a href="#" class="link-custom">Clique aqui</a>
                             </div>
                         </div>
+
                     </div>
 
                 </div>
 
-            </div>
+
         </section>
         <!-- //Certificados -->
 
         <!-- Contato-->
-        <section id="contact" class="full-height px-lg-5">
+        <section id="Contato" class="full-height px-lg-5">
             <div class="container">
 
                 <div class="row justify-content-center text-center">
@@ -396,6 +420,8 @@
                         <div class="social-icons">
                             <a href="https://www.instagram.com/kauematos2003/"><i class="lab la-instagram"></i></a>
                             <a href="https://github.com/iKaueMatos"><i class="lab la-github"></i></a>
+                            <a href="https://www.linkedin.com/in/kauê-matos-oliveira-a76410213/"><i
+                                    class="lab la-linkedin"></i></a>
                         </div>
                     </div>
                 </div>
