--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                                     pilares da Sustentabilidade.
                                     Tecnologias utilizadas no desenvolvimento:HTML,CSS E JAVASCRIPT
                                     Reponsividade:Não aplicada</p>
-                                <a href="http://kaue.c1.biz" class="link-custom">Read More</a>
+                                <a href="http://kaue.c1.biz" class="link-custom">Clique aqui</a>
                             </div>
                         </div>
                     </div>
@@ -196,7 +196,7 @@
                                     desenvolvemos primeiro o layout mobile e logo em seguida vamos mudando para
                                     respectivas telas por exemplo de tablet e
                                     desktop(monitor).</p>
-                                <a href="#" class="link-custom">Read More</a>
+                                <a href="#" class="link-custom">Clique aqui</a>
                             </div>
                         </div>
                     </div>
