--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                                     desenvolvemos primeiro o layout mobile e logo em seguida vamos mudando para
                                     respectivas telas por exemplo de tablet e
                                     desktop(monitor).</p>
-                                <a href="#" class="link-custom">Clique aqui</a>
+                                <a href="https://ikauematos.github.io/Books---Mobile-first/" class="link-custom">Clique aqui</a>
                             </div>
                         </div>
                     </div>
