--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                 <i class="las la-feather"></i>
                             </div>
                             <h5 class="mt-4 mb-2">Developer Back-end Java</h5>
-                            <p>Experiencia com linguagem de programação java orientada a objetos juntamente com o desenvolvimento de banco de dados utilizando MySQL</p>
+                            <p class="text-brand2">Experiencia com linguagem de programação java orientada a objetos juntamente com o desenvolvimento de banco de dados utilizando MySQL</p>
 
                         </div>
                     </div>
@@ -108,7 +108,7 @@
                                 <i class="las la-pencil-ruler"></i>
                             </div>
                             <h5 class="mt-4 mb-2">Estudando</h5>
-                            <p>Atualmente estou estudando desenvolvimento de software com linguagem de programação Java.</p>
+                            <p class="text-brand2">Atualmente estou estudando desenvolvimento de software com linguagem de programação Java.</p>
                         </div>
                     </div>
 
@@ -118,7 +118,7 @@
                                 <i class="las la-laptop-code"></i>
                             </div>
                             <h5 class="mt-4 mb-2">Developer Front-end</h5>
-                            <p>Experiência com linguagem de programação JavaScript e React.js.</p>
+                            <p class="text-brand2">Experiência com linguagem de programação JavaScript e React.js.</p>
 
                         </div>
                     </div>
@@ -148,7 +148,7 @@
                             </div>
                             <div class="card-custom-content p-4">
                                 <h4>Ladding page Animais</h4>
-                                <p>Projeto desenvolvido com tecnoligias HTML,CSS,JAVASCRIPT e SASS utilizando o formato em grid o intuito do desenvolvimento foi aprimorar os meus conhecimentos em JavaScript e Grid.
+                                <p class="text-brand2">Projeto desenvolvido com tecnoligias HTML,CSS,JAVASCRIPT e SASS utilizando o formato em grid o intuito do desenvolvimento foi aprimorar os meus conhecimentos em JavaScript e Grid.
                                 </p>
                                 <a href="https://ikauematos.github.io/web-design-animais.js/
                                 " class="link-custom">Clique aqui</a>
@@ -163,7 +163,7 @@
                             </div>
                             <div class="card-custom-content p-4">
                                 <h4>Ladding page Apeperia</h4>
-                                <p>Esse projeto foi desenvolvido em Html,Css e Java Script o foco principal desse projeto e acessibilidade a maneira que o site ira se comportar com usuário que tem alguma deficiência física e importante pensar em todos os
+                                <p class="text-brand2">Esse projeto foi desenvolvido em Html,Css e Java Script o foco principal desse projeto e acessibilidade a maneira que o site ira se comportar com usuário que tem alguma deficiência física e importante pensar em todos os
                                     tipos de usuário e maneiras de se comunicar com os mesmos ! Tecnologias utilizadas:Html,Css e JavaScript</p>
                                 <a href="https://ikauematos.github.io/Apeparia---acessibilidade/" class="link-custom">Clique aqui</a>
                             </div>
@@ -177,7 +177,7 @@
                             </div>
                             <div class="card-custom-content p-4">
                                 <h4>Software Pacman</h4>
-                                <p>Esse projeto foi desenvolvido com a linguagem de programação python proposto pela UNIP juntamente com biblioteca pygame o objetivo desse projeto era ilustrar o sustentabilida vontada para carbono neutro e mercado de credito
+                                <p class="text-brand2">Esse projeto foi desenvolvido com a linguagem de programação python proposto pela UNIP juntamente com biblioteca pygame o objetivo desse projeto era ilustrar o sustentabilida vontada para carbono neutro e mercado de credito
                                     de carbono.</p>
                                 <a href="https://github.com/iKaueMatos/Software.Aps-Pacman.py" class="link-custom">Clique aqui</a>
                             </div>
@@ -193,7 +193,7 @@
                             </div>
                             <div class="card-custom-content p-4">
                                 <h4>Landing Page Alura books </h4>
-                                <p>Projeto proposto pela alura com método de desenvolvimento Mobile-first onde desenvolvemos primeiro o layout mobile e logo em seguida vamos mudando para respectivas telas por exemplo de tablet e desktop(monitor).
+                                <p class="text-brand2">Projeto proposto pela alura com método de desenvolvimento Mobile-first onde desenvolvemos primeiro o layout mobile e logo em seguida vamos mudando para respectivas telas por exemplo de tablet e desktop(monitor).
                                 </p>
                                 <a href="https://ikauematos.github.io/Books---Mobile-first/" class="link-custom">Clique aqui</a>
                             </div>
@@ -207,7 +207,7 @@
                             </div>
                             <div class="card-custom-content p-4">
                                 <h4>Ladding page Hora de aventura React.js</h4>
-                                <p>Projeto desenvolvido com React.js com intuito de adicionar personagens do desenho de hora de aventura via links da web. O que foi possivel aprender com o desenvolvimento? • Usestate Compants • Props • Criação de componentes
+                                <p class="text-brand2">Projeto desenvolvido com React.js com intuito de adicionar personagens do desenho de hora de aventura via links da web. O que foi possivel aprender com o desenvolvimento? • Usestate Compants • Props • Criação de componentes
                                 </p>
                                 <a href="project-hora-aventura-card-add-25gb.vercel.app
                                 " class="link-custom">Clique aqui</a>
