--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                                 <div class="bg-base p-4 rounded-4 shadow-effect">
                                     <h4>Cursando Graduação ciencias da computação</h4>
                                     <p class="text-brand mb-2">Universidade Unip Marques são vicente (2022 - 2025)</p>
-                                    <p class="mb-0">Ciência da computação é a ciência que estuda as técnicas, metodologias, instrumentos computacionais e aplicações tecnológicas, que informatizem os processos e desenvolvam soluções de processamento de dados de entrada
+                                    <p class="text-brand2" class="mb-0">Ciência da computação é a ciência que estuda as técnicas, metodologias, instrumentos computacionais e aplicações tecnológicas, que informatizem os processos e desenvolvam soluções de processamento de dados de entrada
                                         e saída pautados no computador.</p>
                                 </div>
                             </div>
@@ -251,7 +251,7 @@
                                 <div class="bg-base p-4 rounded-4 shadow-effect">
                                     <h4>Cursando FIAP Desenvolivmento software</h4>
                                     <p class="text-brand mb-2" class="text-brad2">FIAP (2023 - 2023)</p>
-                                    <p class="mb-0">Desenvolvimento com linguagem de programação Java
+                                    <p class="text-brand2" class="mb-0">Desenvolvimento com linguagem de programação Java
                                     </p>
                                 </div>
                             </div>
@@ -260,7 +260,7 @@
                                 <div class="bg-base p-4 rounded-4 shadow-effect">
                                     <h4>Etec Paulo do Carmo Monteiro</h4>
                                     <p class="text-brand mb-2">Informatica para internet Front-end (2020 - 2021)</p>
-                                    <p class="mb-0">Curso vontado para desenvolvimento web de sites e manutenção de maquinas
+                                    <p class="text-brand2" class="mb-0">Curso vontado para desenvolvimento web de sites e manutenção de maquinas
                                     </p>
                                 </div>
                             </div>
@@ -268,8 +268,8 @@
                             <div class="col-12" data-aos="fade-up" data-aos-delay="600">
                                 <div class="bg-base p-4 rounded-4 shadow-effect">
                                     <h4>Alura</h4>
-                                    <p class="text-brand mb-2">Desenvolvimento Front-end (2022 - 2023)</p>
-                                    <p class="mb-0"></p>
+                                    <p class="text-brand">Desenvolvimento Front-end (2022 - 2023)</p>
+                                    <p class="mb-0">Desenvolvimento Back-enn & Front-end</p>
                                 </div>
                             </div>
 
@@ -288,14 +288,14 @@
                                 <div class="bg-base p-4 rounded-4 shadow-effect">
                                     <h4>Auxiliar de escritorio em geral</h4>
                                     <p class="text-brand mb-2">Delute comercial LTDA (2021 - Atual) </p>
-                                    <p class="mb-0">Atividades:cotrole de estoque,Descarga e carregamento de caminhões,separaçao de produtos,embalador </p>
+                                    <p class="text-brand2" class="mb-0">Atividades:cotrole de estoque,Descarga e carregamento de caminhões,separaçao de produtos,embalador </p>
                                 </div>
                             </div>
                             <div class="col-12" data-aos="fade-up" data-aos-delay="600">
                                 <div class="bg-base p-4 rounded-4 shadow-effect">
                                     <h4>Trabalho voluntario</h4>
                                     <p class="text-brand mb-2">Delicias G&M (04/2021 - 11/2021) </p>
-                                    <p class="mb-0">Atividades:Criação de Website para divulgação de alimentos,projeto proposto pela escola tecnica ETEC.</p>
+                                    <p class="text-brand2" class="text-brand mb-2" class="mb-0">Atividades:Criação de Website para divulgação de alimentos,projeto proposto pela escola tecnica ETEC.</p>
                                 </div>
                             </div>
 
