--- a/index.html
+++ b/index.html
@@ -209,8 +209,7 @@
                                 <h4>Ladding page Hora de aventura React.js</h4>
                                 <p class="text-brand2">Projeto desenvolvido com React.js com intuito de adicionar personagens do desenho de hora de aventura via links da web. O que foi possivel aprender com o desenvolvimento? • Usestate Compants • Props • Criação de componentes
                                 </p>
-                                <a href="project-hora-aventura-card-add-25gb.vercel.app
-                                " class="link-custom">Clique aqui</a>
+                                <a href="https://project-hora-aventura-card-add-25gb.vercel.app" class="link-custom">Clique aqui</a>
                             </div>
                         </div>
                     </div>
