--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-10">
-                        <h1 class="display-4 fw-bold" data-aos="fade-up">Olá tudo bem? prazer me chamo Kauê</h1><span class="text-brand">Developer Back-end Java</span> </h1>
+                        <h1 class="display-4 fw-bold" data-aos="fade-up">Olá tudo bem? prazer me chamo Kauê</h1><span class="text-brand">Desenvolvedor Back-end Java</span> </h1>
                         <p class="lead mt-2 mb-4" class="text-brand3" data-aos="fade-up" data-aos-delay="300"><span class="text-brand3">Minha paixão por tecnologia surgiu dez de quando era pequeno e tinha 10 anos quando conehci o mundo da tecnologia acebei me apaixonando sempre fui curioso e bastante esforçado em descobrir coisas novas,com 14 anos descobri o mundo
                             da programação por meio de colegas e familiares dez de então vim me qualificando para chegar no meu objetivo atualmente sou estudante de ciencias da computação e estou no 3°semestre formado em desenvolvimento de software pela
                             ETEC paulo carmo monteiro curso tecnico.</span></p>
@@ -96,8 +96,8 @@
                             <div class="iconbox rounded-4">
                                 <i class="las la-feather"></i>
                             </div>
-                            <h5 class="mt-4 mb-2">Developer Back-end Java</h5>
-                            <p class="text-brand2">Experiencia com linguagem de programação java orientada a objetos juntamente com o desenvolvimento de banco de dados utilizando MySQL</p>
+                            <h5 class="mt-4 mb-2">Desenvolvedor Back-end Java</h5>
+                            <p class="text-brand2">Experiencia com linguagem de programação java orientada a objetos juntamente com o desenvolvimento de banco de dados utilizando MySQL.</p>
 
                         </div>
                     </div>
@@ -117,7 +117,7 @@
                             <div class="iconbox rounded-4">
                                 <i class="las la-laptop-code"></i>
                             </div>
-                            <h5 class="mt-4 mb-2">Developer Front-end</h5>
+                            <h5 class="mt-4 mb-2">Desenvolvedor Front-end</h5>
                             <p class="text-brand2">Experiência com linguagem de programação JavaScript e React.js.</p>
 
                         </div>
@@ -144,11 +144,11 @@
                     <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
                         <div class="card-custom rounded-4 bg-base shadow-effect">
                             <div class="card-custom-image rounded-4">
-                                <img class="rounded-4" src="./assets/images/project-5.jpg" alt="">
+                                <img class="rounded-4" src="./assets/images/project-5.jpg" alt="Projeto animais fantasticos desenvolvido com HTML,CSS E JAVASCRIPT">
                             </div>
                             <div class="card-custom-content p-4">
-                                <h4>Ladding page Animais</h4>
-                                <p class="text-brand2">Projeto desenvolvido com tecnoligias HTML,CSS,JAVASCRIPT e SASS utilizando o formato em grid o intuito do desenvolvimento foi aprimorar os meus conhecimentos em JavaScript e Grid.
+                                <h4>Ladding page Animais fantásticos</h4>
+                                <p class="text-brand2">Projeto desenvolvido com tecnologias HTML,CSS,JAVASCRIPT e SASS utilizando o formato em grid o intuito do desenvolvimento foi aprimorar os meus conhecimentos em JavaScript e Grid.
                                 </p>
                                 <a href="https://ikauematos.github.io/web-design-animais.js/
                                 " class="link-custom">Clique aqui</a>
@@ -159,7 +159,7 @@
                     <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
                         <div class="card-custom rounded-4 bg-base shadow-effect">
                             <div class="card-custom-image rounded-4">
-                                <img class="rounded-4" src="./assets/images/project-2.png" alt="">
+                                <img class="rounded-4" src="./assets/images/project-2.png" alt="Projeto apeperia realizando em html,css,javaScript">
                             </div>
                             <div class="card-custom-content p-4">
                                 <h4>Ladding page Apeperia</h4>
@@ -173,7 +173,7 @@
                     <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
                         <div class="card-custom rounded-4 bg-base shadow-effect">
                             <div class="card-custom-image rounded-4">
-                                <img class="rounded-4" src="./assets/images/pacman.png" alt="">
+                                <img class="rounded-4" src="./assets/images/pacman.png" alt="Projeto Pacman realizado em Python">
                             </div>
                             <div class="card-custom-content p-4">
                                 <h4>Software Pacman</h4>
@@ -189,7 +189,7 @@
                     <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
                         <div class="card-custom rounded-4 bg-base shadow-effect">
                             <div class="card-custom-image rounded-4">
-                                <img class="rounded-4" src="./assets/images/project-4.png" alt="">
+                                <img class="rounded-4" src="./assets/images/project-4.png" alt="Projeto alura books realizado no metodo Mobile-first">
                             </div>
                             <div class="card-custom-content p-4">
                                 <h4>Landing Page Alura books </h4>
@@ -203,7 +203,7 @@
                     <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
                         <div class="card-custom rounded-4 bg-base shadow-effect">
                             <div class="card-custom-image rounded-4">
-                                <img class="rounded-4" src="./assets/images/project-hora-aventura.png" alt="">
+                                <img class="rounded-4" src="./assets/images/project-hora-aventura.png" alt="Projeto hora de aventura realizado em React.js">
                             </div>
                             <div class="card-custom-content p-4">
                                 <h4>Ladding page Hora de aventura React.js</h4>
@@ -228,7 +228,7 @@
                 <div class="row pb-4" data-aos="fade-up">
                     <div class="col-lg-8">
                         <h6 class="text-brand">Sobre</h6>
-                        <h1>Escolaridade & Experiencia de trabalho</h1>
+                        <h1>Escolaridade & Experiência de trabalho</h1>
                     </div>
                 </div>
 
@@ -240,7 +240,7 @@
 
                             <div class="col-12" data-aos="fade-up" data-aos-delay="600">
                                 <div class="bg-base p-4 rounded-4 shadow-effect">
-                                    <h4>Cursando Graduação ciencias da computação</h4>
+                                    <h4>Cursando bracharelado de Ciencias da computação 3º Semestre </h4>
                                     <p class="text-brand mb-2">Universidade Unip Marques são vicente (2022 - 2025)</p>
                                     <p class="text-brand2" class="mb-0">Ciência da computação é a ciência que estuda as técnicas, metodologias, instrumentos computacionais e aplicações tecnológicas, que informatizem os processos e desenvolvam soluções de processamento de dados de entrada
                                         e saída pautados no computador.</p>
@@ -249,7 +249,7 @@
 
                             <div class="col-12" data-aos="fade-up" data-aos-delay="600">
                                 <div class="bg-base p-4 rounded-4 shadow-effect">
-                                    <h4>Cursando FIAP Desenvolivmento software</h4>
+                                    <h4>Cursando Curso tecnico FIAP Desenvolivmento software com linguagem de programação java</h4>
                                     <p class="text-brand mb-2" class="text-brad2">FIAP (2023 - 2023)</p>
                                     <p class="text-brand2" class="mb-0">Desenvolvimento com linguagem de programação Java
                                     </p>
@@ -281,14 +281,14 @@
 
                     <div class="col-lg-6">
 
-                        <h3 class="mb-4" data-aos="fade-up" data-aos-delay="300">Experiencia de Trabalho </h3>
+                        <h3 class="mb-4" data-aos="fade-up" data-aos-delay="300">Experiência de Trabalho </h3>
                         <div class="row gy-4">
 
                             <div class="col-12" data-aos="fade-up" data-aos-delay="600">
                                 <div class="bg-base p-4 rounded-4 shadow-effect">
-                                    <h4>Auxiliar de escritorio em geral</h4>
+                                    <h4>Auxiliar de escritório em geral</h4>
                                     <p class="text-brand mb-2">Delute comercial LTDA (2021 - Atual) </p>
-                                    <p class="text-brand2" class="mb-0">Atividades:cotrole de estoque,Descarga e carregamento de caminhões,separaçao de produtos,embalador </p>
+                                    <p class="text-brand2" class="mb-0">Atividades:Cotrole de estoque,Descarga e carregamento de caminhões,separaçao de produtos,embalador </p>
                                 </div>
                             </div>
                             <div class="col-12" data-aos="fade-up" data-aos-delay="600">
@@ -332,7 +332,7 @@
                             <div class="card-custom-content p-4">
                                 <p class="text-brand mb-2">19 Janeiro,2022</p>
                                 <h5 class="mb-4">Marketing Digital</h5>
-                                <a href="#" class="link-custom">Clique aqui</a>
+                                <a href="https://www.linkedin.com/feed/update/urn:li:activity:6889720873712934912/" class="link-custom">Clique aqui</a>
                             </div>
                         </div>
                     </div>
@@ -345,7 +345,7 @@
                             <div class="card-custom-content p-4">
                                 <p class="text-brand mb-2">1 agosto, 2022</p>
                                 <h5 class="mb-4">Front-end</h5>
-                                <a href="#" class="link-custom">Clique aqui</a>
+                                <a href="https://cursos.alura.com.br/degree/certificate/44629c96-e53b-4df5-9970-f9791398daec" class="link-custom">Clique aqui</a>
                             </div>
                         </div>
                     </div>
@@ -357,8 +357,8 @@
                             </div>
                             <div class="card-custom-content p-4">
                                 <p class="text-brand mb-2">5 Julho, 2022</p>
-                                <h5 class="mb-4">HTML E CSS</h5>
-                                <a href="#" class="link-custom">Clique aqui</a>
+                                <h5 class="mb-4">HTML5 E CSS3</h5>
+                                <a href="https://cursos.alura.com.br/degree/certificate/9eb436ca-efc7-45f3-b9c9-120b2d4b1adc" class="link-custom">Clique aqui</a>
                             </div>
                         </div>
                     </div>
@@ -371,7 +371,7 @@
                             <div class="card-custom-content p-4">
                                 <p class="text-brand mb-2">24 Julho, 2022</p>
                                 <h5 class="mb-4">Design UX/UI | Figma</h5>
-                                <a href="#" class="link-custom">Clique aqui</a>
+                                <a href="https://cursos.alura.com.br/certificate/75b8f396-6545-49b4-93fd-401864a6f088" class="link-custom">Clique aqui</a>
                             </div>
                         </div>
                     </div>
@@ -384,7 +384,7 @@
                             <div class="card-custom-content p-4">
                                 <p class="text-brand mb-2">24 Julho, 2022</p>
                                 <h5 class="mb-4">Design UX/UI </h5>
-                                <a href="#" class="link-custom">Clique aqui</a>
+                                <a href="https://origamid.com/certificate/16988945" class="link-custom">Clique aqui</a>
                             </div>
                         </div>
                     </div>
@@ -397,7 +397,7 @@
                             <div class="card-custom-content p-4">
                                 <p class="text-brand mb-2">12 Março,2022</p>
                                 <h5 class="mb-4">Python orientado a objetos</h5>
-                                <a href="#" class="link-custom">Clique aqui</a>
+                                <a href="https://cursos.alura.com.br/degree/certificate/4af5ae4f-cabd-433d-87d7-872e1da02930" class="link-custom">Clique aqui</a>
                             </div>
                         </div>
                     </div>
