--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
                 <div class="row pb-4" data-aos="fade-up">
                     <div class="col-lg-8">
-                        <h6 class="text-brand">Meus Trabalhos</h6>
+                        <h6 class="text-brand">Projetos</h6>
                         <h1>Projetos mais recentes</h1>
                     </div>
                 </div>
