--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                             </div>
                             <div class="col-12" data-aos="fade-up" data-aos-delay="600">
                                 <div class="bg-base p-4 rounded-4 shadow-effect">
-                                    <h4>Trabalho voluntario</h4>
+                                    <h4>Trabalho voluntário</h4>
                                     <p class="text-brand mb-2">Delicias G&M (04/2021 - 11/2021) </p>
                                     <p class="text-brand2" class="text-brand mb-2" class="mb-0">Atividades:Criação de Website para divulgação de alimentos,projeto proposto pela escola tecnica ETEC.</p>
                                 </div>
